refactor pets
