# internal/http/usecase/pets.go
@@ -4,31 +4,52 @@ import (
 	"fmt"
 	"net/http"
 	"simpleOpenapi/internal/http/gen"
+	"sort"
 	"sync"
 
 	"github.com/labstack/echo/v4"
 )
 
-type Pet struct {
-	Pets   map[int64]gen.Pet
+type PetUsecase struct {
+	Pets   map[int64]gen.PetResponse
 	NextId int64
 	Lock   sync.Mutex
 }
 
-func NewPet() *Pet {
-	return &Pet{
-		Pets:   make(map[int64]gen.Pet),
+func NewPet() *PetUsecase {
+	return &PetUsecase{
+		Pets:   make(map[int64]gen.PetResponse),
 		NextId: 1000,
 	}
 }
 
-func (p *Pet) FindPets(ctx echo.Context, params gen.FindPetsParams) error {
+func (p *PetUsecase) FindPets(ctx echo.Context, params gen.FindPetsParams) error {
 	p.Lock.Lock()
 	defer p.Lock.Unlock()
 
-	var result []gen.Pet
+	var result []gen.PetResponse
 
-	for _, pet := range p.Pets {
+	// 順番通りに並べる(デフォルトAsc)
+	isAsc := true
+	if params.Order != nil && *params.Order == "desc" {
+		isAsc = false
+	}
+	fmt.Println(isAsc)
+	keys := make([]int64, 0, len(p.Pets))
+	for k := range p.Pets {
+		keys = append(keys, k)
+	}
+	sort.SliceStable(keys, func(i, j int) bool {
+		if isAsc {
+			return keys[int64(i)] < keys[int64(j)]
+		}
+		return keys[int64(j)] < keys[int64(i)]
+	})
+
+	fmt.Println(keys)
+
+	for _, key := range keys {
+		pet := p.Pets[key]
 		if params.Tags != nil {
 			// If we have tags,  filter pets by tag
 			for _, t := range *params.Tags {
@@ -52,31 +73,33 @@ func (p *Pet) FindPets(ctx echo.Context, params gen.FindPetsParams) error {
 	return ctx.JSON(http.StatusOK, result)
 }
 
-func (p *Pet) AddPet(ctx echo.Context) error {
-	// We expect a NewPet object in the request body.
-	var newPet gen.NewPet
-	err := ctx.Bind(&newPet)
+func (p *PetUsecase) AddPet(ctx echo.Context) error {
+	req := new(gen.Pet)
+	err := ctx.Bind(&req)
 	if err != nil {
-		return sendPetstoreError(ctx, http.StatusBadRequest, "Invalid format for NewPet")
+		return sendError(ctx, http.StatusBadRequest, "Invalid format for NewPet")
 	}
-	// We now have a pet, let's add it to our "database".
+	// We now have a np, let's add it to our "database".
 
 	// We're always asynchronous, so lock unsafe operations below
 	p.Lock.Lock()
 	defer p.Lock.Unlock()
 
 	// We handle pets, not NewPets, which have an additional ID field
-	var pet gen.Pet
-	pet.Name = newPet.Name
-	pet.Tag = newPet.Tag
-	pet.Id = p.NextId
+	res := gen.PetResponse{
+		Id: p.NextId,
+		Pet: gen.Pet{
+			Name: req.Name,
+			Tag:  req.Tag,
+		},
+	}
 	p.NextId = p.NextId + 1
 
 	// Insert into map
-	p.Pets[pet.Id] = pet
+	p.Pets[res.Id] = res
 
 	// Now, we have to return the NewPet
-	err = ctx.JSON(http.StatusCreated, pet)
+	err = ctx.JSON(http.StatusCreated, res)
 	if err != nil {
 		// Something really bad happened, tell Echo that our handler failed
 		return err
@@ -91,25 +114,25 @@ func (p *Pet) AddPet(ctx echo.Context) error {
 	return nil
 }
 
-func (p *Pet) FindPetById(ctx echo.Context, id int64) error {
+func (p *PetUsecase) FindPetById(ctx echo.Context, id int64) error {
 	p.Lock.Lock()
 	defer p.Lock.Unlock()
 
 	pet, found := p.Pets[id]
 	if !found {
-		return sendPetstoreError(ctx, http.StatusNotFound,
+		return sendError(ctx, http.StatusNotFound,
 			fmt.Sprintf("Could not find pet with ID %d", id))
 	}
 	return ctx.JSON(http.StatusOK, pet)
 }
 
-func (p *Pet) DeletePet(ctx echo.Context, id int64) error {
+func (p *PetUsecase) DeletePet(ctx echo.Context, id int64) error {
 	p.Lock.Lock()
 	defer p.Lock.Unlock()
 
 	_, found := p.Pets[id]
 	if !found {
-		return sendPetstoreError(ctx, http.StatusNotFound,
+		return sendError(ctx, http.StatusNotFound,
 			fmt.Sprintf("Could not find pet with ID %d", id))
 	}
 	delete(p.Pets, id)
